# AgentNextg-AgentKit

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  Dockerfile  ISSUE_SOLVING_GUIDE.md  README.md  SECURITY.md  VERSION  background.js  content-bundle.js  docker-compose.yml  manifest.json  package-lock.json  package.json  popup.html  popup.js  pyproject.toml  styles.css
.github/ISSUE_TEMPLATE/: feature_request.md  question.md
agents/: repo-builder-agent.md
ai-platform/: bootstrap.md  overview.md
ai-platform/products/: agent-builder-production.md  code-reviewer-production.md
apps/agent-builder/: README.md  main.py
apps/code-reviewer/: README.md  main.py
control-plane/: build-single-binary.sh  go.sum
control-plane/config/: agentfield.yaml
control-plane/scripts/: README.md  quick-mcp-test.sh  test-mcp-endpoints.sh  version-manager.sh
deploy/agent-builder/: Dockerfile  docker-compose.yml
deploy/code-reviewer/: docker-compose.yml
docs/: codebase-alignment.md  module-map.md  platform-overview.md  repo-roadmap.md  upstream-strategy.md
docs/products/: agent-builder-architecture.md  agent-builder-operations.md  agent-builder-roadmap.md  agent-builder.md  code-reviewer-architecture.md  code-reviewer-operations.md  code-reviewer-roadmap.md  code-reviewer.md
langflow_components/: README.md  __init__.py  devteam_component.py  imageteam_component.py
langflow_components/agentkit/: docteam_component.py
org/: high-level-prd.md
scripts/: bump_version.py  uninstall.sh
sdks/adk-js/: .gitignore  (+4 more)
shared/: review-prompt.md
teams/: __init__.py  identity_mixin.py
(+239 files in other folders)
