[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engineering-agent-team"
version = "0.1.0"
description = "AI Engineering Team — Claude Agent SDK powered, AgentCode supported"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "anthropic>=0.45.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "click>=8.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[project.scripts]
eng-team = "eng_team.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/eng_team"]
